--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="adSense.js"></script>
+    
     <meta charset="utf-8" />
     <meta name="website" content="ucbg.github.io" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
